# jugend-fussball

./: .AI-GUIDELINES.md  .ai-models.yaml  .copilot-instructions.md  .gitattributes  .gitignore  .instructions.md  .markdownlint.yaml  .pre-commit-config.yaml  .prompt.md  .yamlfmt  README.md  gitleaks.toml  pyproject.toml
.github/workflows/: docs-pages.yml
doc-engine/: Makefile
doc-engine/scripts/: extract-latest-training-pdf.sh  extract-pdf-pages.sh  render-diagrams.sh  render-plantuml-png.sh  validate-docs.sh
doc-engine/source/: Dockerfile.sphinx  conf.py  index.md
doc-engine/source/_static-content/: title-meta.css  title-meta.js
doc-engine/source/dfb-wfv/: basis-coach-schulung.md  dfb.md  wfv.md
doc-engine/source/dfb-wfv/dfb-basis-coach-2026/: dfb-basis-coach-2026.md
doc-engine/source/dfb-wfv/skript-basis-coach/: skript.md
doc-engine/source/organisatorisches/: dokumentation.md  evaluation_teamorganisation.md  spielformationen-kleinfeld.md  standorte-und-spielfelder.md  teamorganisation.md  trainingsausruestung-c-jugend.md
doc-engine/source/organisatorisches/elternabende/: einladung-elternabend.md  elternabend-di-30.06.2026-notizen.md  elternabend-di-30.06.2026.md  (+3 more)
doc-engine/source/spielbetrieb/: spielbetrieb.md
doc-engine/source/trainingseinheiten/: aufbau-template.md  c-jugend-planung.md  fuer-eltern.md  leitfaden-und-vorlage.md  spielformationen-kleinfeld.md  trainingsplanung.md  uebersicht.md
doc-engine/source/trainingskonzepte/: basis-coach-schulung.md  uebersicht.md
doc-engine/source/umfeld/: freunde-familie-eltern-kinder.md
(+69 files in other folders)
